--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 	"devDependencies": {
 		"chai": "^4.2.0",
 		"chai-as-promised": "^7.1.1",
-		"danger": "^3.1.3",
+		"danger": "^10.5.4",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-jsdoc": "^30.5.1",
 		"eslint-plugin-prettier": "^3.1.4",
@@ -58,7 +58,7 @@
 		"nyc": "^15.1.0",
 		"prettier": "^2.1.2",
 		"pretty-quick": "^3.0.2",
-		"spectron": "^8.0.0",
+		"spectron": "^13.0.0",
 		"stylelint": "^13.7.1",
 		"stylelint-config-prettier": "^8.0.2",
 		"stylelint-config-standard": "^20.0.0",
@@ -70,6 +70,7 @@
 	"dependencies": {
 		"colors": "^1.4.0",
 		"console-stamp": "^0.2.9",
+		"electron": "^6.1.7",
 		"eslint": "^7.9.0",
 		"express": "^4.17.1",
 		"express-ipfilter": "^1.1.2",
