--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/MMM-NowPlayingOnSpotify"]
 	path = modules/MMM-NowPlayingOnSpotify
 	url = https://github.com/raywo/MMM-NowPlayingOnSpotify.git
+[submodule "modules/MMM-Remote-Control"]
+	path = modules/MMM-Remote-Control
+	url = https://github.com/Jopyth/MMM-Remote-Control.git
